serde-query/tests/compile-fail/query_parse_error.stderr
error: 1..1: expected '[' or an identifier, got EOF
 --> tests/compile-fail/query_parse_error.rs:3:5
  |
3 |     #[query(r#"."#)]
  |     ^^^^^^^^^^^^^^^^

error: 1..22: expected an index or a quoted field inside indexing, got Field
 --> tests/compile-fail/query_parse_error.rs:5:5
  |
5 |     #[query(r#".[kubernetes_clusters]"#)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: 1..5: expected '[' or an identifier, got Error
 --> tests/compile-fail/query_parse_error.rs:7:5
  |
7 |     #[query(r#".😎"#)]
  |     ^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `A: serde::Deserialize<'de>` is not satisfied
  --> tests/compile-fail/query_parse_error.rs:16:26
   |
16 |     assert_deserialize::<A>();
   |                          ^ the trait `Deserialize<'_>` is not implemented for `A`
   |
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `A` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a str
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
           and $N others
note: required by a bound in `assert_deserialize`
  --> tests/compile-fail/query_parse_error.rs:11:31
   |
11 | fn assert_deserialize<'de, D: serde::Deserialize<'de>>() {}
   |                               ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_deserialize`

error[E0277]: the trait bound `A: DeserializeQuery<'_>` is not satisfied
  --> tests/compile-fail/query_parse_error.rs:17:32
   |
17 |     assert_deserialize_query::<A>();
   |                                ^ the trait `DeserializeQuery<'_>` is not implemented for `A`
   |
note: required by a bound in `assert_deserialize_query`
  --> tests/compile-fail/query_parse_error.rs:12:37
   |
12 | fn assert_deserialize_query<'de, D: serde_query::DeserializeQuery<'de>>() {}
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_deserialize_query`
